--- a/Web.Tests/App.config
+++ b/Web.Tests/App.config
@@ -4,6 +4,9 @@
     that apply only to the Test project.
 -->
 <configuration>
+  <configSections>
+    <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
+  </configSections>
     <appSettings>
 
     </appSettings>
@@ -43,4 +46,8 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<specFlow>
+    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
+  <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --><!-- use unit test provider SpecRun+NUnit or SpecRun+MsTest for being able to execute the tests with SpecRun and another provider --><unitTestProvider name="SpecRun" /><plugins>
+      <add name="SpecRun" />
+    </plugins></specFlow></configuration>
