--- a/Web.Tests/packages.config
+++ b/Web.Tests/packages.config
@@ -5,4 +5,9 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
+  <package id="SpecFlow" version="2.4.0" targetFramework="net452" />
+  <package id="SpecRun.Runner" version="1.8.5" targetFramework="net452" />
+  <package id="SpecRun.SpecFlow" version="1.8.5" targetFramework="net452" />
+  <package id="SpecRun.SpecFlow.2-4-0" version="1.8.5" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net452" />
 </packages>
